# akl-agents

./: .gitignore  .windsurfrules  32bit.md  ARCHIVAL-TAGS.md  BIGNUM.md  BRANCH-ORGANIZATION.md  BUILD.md  CHANGES.md  CLAUDE.md  CLI-HANDOFF.md  CMakeLists.txt  CORRECTION-EXAMPLES.md  CORRECTIONS-COMPLETED.md  DRAFT-CORRECTIONS-NEEDED.md  ENDIAN.md  GMP_MODERNIZATION.md  GUARD-SEMANTICS-CORRECTIONS.md  IMPROVEMENTS-README.md  INSIGHTS.md  INTEGRATION.md  MISSING-GUARD-SEMANTICS.md  Makefile  Makefile.in  README  README.md  REFACTORING.md  SESSION-SUMMARY.md  SPECIFICATIONS.md  STRATEGY.md  STUDY-PLAN.md  SYNTAX-ERROR-CORRECTION.md  THESIS-VS-DRAFT-REVIEW.md  X86-64-IMPROVEMENTS-BRANCH-ANALYSIS.md  agents  agents.1  agents.in  agents_wrapper.sh  agentsscript  akl.1  akl.el  (+23 more)
.claude/commands/: wotan.md
CVS/: Entries  Repository
autom4te.cache/: output.0  requests  traces.0  traces.1
benchmarks/: Makefile  bench1.akl  bignum.akl
benchmarks/CVS/: Entries  Repository
cmake/: FindGMP.cmake
compiler/: Makefile  ReadMe  alloc_help.akl  body_alloc.akl  builtin.akl  clause.akl  compiler.akl  head_alloc.akl  help.akl  instr.txt  io.akl  non_unif.akl  opt.akl  opt_block.akl  opt_help.akl  opt_reg.akl  opt_try.akl  pred.akl  pred_def.akl  pred_non_unif.akl  pred_sus.akl  pred_switch.akl  pred_tree.akl  push.akl  spec_alloc.akl  start.akl  test.akl  transform.akl  transform_help.akl  unif.akl  var.akl
compiler/CVS/: Entries  Repository
compiler/examples/: carwash1.akl  carwash2.akl  t.akl
demos/: Makefile  README  ancestors.pam  cipher.akl  cipher.pam  cube.akl  cube.pam  fd_alpha.akl  fd_alpha.pam  fd_cars.akl  fd_cars.pam  fd_eq10.akl  fd_eq10.pam  fd_eq20.akl  fd_eq20.pam  fd_five.akl  fd_five.pam  fd_magic.akl  fd_magic.pam  fd_queens.akl  fd_queens.pam  fd_test.akl  fd_test.pam  flypan.pam  ghcexamples.pam  gmdemo.akl  gmdemo.pam  iostreams.akl  kkqueen.pam  klife.akl  klife.pam  knights.akl  knights.pam  life.akl  life.pam  lists.pam  lookup.pam  lsqueen.pam  mastermind.akl  mastermind.pam  (+35 more)
demos/CVS/: Entries  Repository
demos/flypan/: Makefile  gpan.akl  gpan.pam  gpan_graph.akl  gpan_graph.pam  gpan_query.akl  gpan_query.pam
demos/gmbm/: alf.x11  authors.xbm  boortz.x11  matsc.x11  queensi.bm  san.x11
doc/: Makefile  SAGA-Manual  SAGA-Manual.ps  agents-user  agents-user-1  agents-user-2  agents-user-3  akl.bib  aklintro.tex  engine.texi  internals.tex  library.texi  system.texi  update-links  user.texi
doc/CVS/: Entries  Repository
doc/aklintro/: Makefile  abib.bib  agents.ps  aklintro.tex  procidiom.ps  proctree.ps  setting.ps
docs/: BUILD-SYSTEM-ANALYSIS.md  ESSENTIAL-EDITS.md
docs/attempts/: ARM64-MINIMAL-PORT.md  LESSONS-LEARNED.md  README.md
docs/book/: README.md
docs/draft/: 00-MASTER-OUTLINE.md  README.md  chapter-01-introduction.md  chapter-02-akl-language.md  chapter-04-pam.md  chapter-05-execution-model.md  chapter-11-unification.md  chapter-12-choice-points-backtracking.md  chapter-13-and-boxes-concurrency.md  chapter-14-constraint-variables-suspension.md  chapter-15-port-communication.md  (+5 more)
emulator/: .gdbinit  CMakeLists.txt  Makefile  abstraction.c  abstraction.h  agents  aggregate.c  aggregate.h  array.c  array.h  bam.c  bam.h  basics.h  bignum.c  bignum.h  builtin.c  builtin.h  c.h  candidate.c  candidate.h  code.c  code.h  compare.c  compare.h  config.c  config.h  configuration.c  configuration.h  constants.h  copy.c  copy.h  database.c  database.h  debug.c  debug.h  decodeinstr.h  display.c  display.c.m4  display.h  emulator.proj.sit  (+86 more)
emulator/compat/: CMakeLists.txt  debug_checks.h  gc_64bit.c  gc_64bit.h  gmp_compat.h  storage_64bit.c  storage_64bit.h  structure_compat.h  tagged_pointers.h  tagged_pointers_64bit.c  tagged_pointers_64bit.h  tagged_pointers_compat.c  tagged_pointers_compat.h
environment/: Makefile  aggregate.akl  boot.pam  builtin.akl  call.akl  current_op.akl  dcg.akl  error.akl  fd_arith.akl  fd_atmost.akl  fd_count.akl  fd_element.akl  fd_labeling.akl  foreign.akl  format.akl  functor.akl  lambda.akl  load.akl  nu.akl  prolog.akl  qa.akl  rdtok.akl  read.akl  reflection.akl  sort.akl  statistics.akl  streams.akl  synch3.akl  toplev.pam  unix.akl  write.akl
gmp/: Makefile  ansi2knr.c  assert.lo  compat.lo  config.cache  config.h  config.m4  config.status  errno.lo  extract-dbl.lo  gmp-mparam.h  gmp.info  insert-dbl.lo  libgmp.la  libtool  memory.lo  mkinstalldirs  mp_bpl.lo  mp_clz_tab.lo  mp_minv_tab.lo  mp_set_fns.lo  rand.lo  randclr.lo  randlc.lo  randlc2x.lo  randraw.lo  randsd.lo  randsdui.lo  stack-alloc.lo  version.lo
gmp/CVS/: Entries  (+1 more)
oldcompiler/: Makefile  README  allocate.akl  analyze.akl  aux.akl  aux.pl  body.akl  builtin.akl  clause.akl  comp.pam  compiler.akl  edit.akl  fd_akl.akl  fd_arith_ask.akl  fd_arith_compile.akl  fd_arith_tell.akl  fd_mon.akl  fd_range.akl  graph.akl  head.akl  instr.akl  main.akl  modes.akl  parser.akl  reader.akl  synch3.akl  translate.akl  try.akl  unify.akl  writepam.akl
scripts/: verify-platform-config.sh  verify-register-defs.sh
tests/: CMakeLists.txt  README
tests/CVS/: Entries  Repository
tests/agents.tests/: foo_abs.akl  format.exp  ioports.exp  old_test.akl  old_test.exp  types.exp
tests/agents.tests/CVS/: Entries  Repository
tests/config/: unix.exp
tests/config/CVS/: Entries  Repository
tests/framework/: test_framework.c  test_framework.h
tests/lib/: agents_test.exp
tests/lib/CVS/: Entries  Repository
tests/unit/: debug_tagged_pointers_64bit.c  test_gc.c  test_gmp_compat.c  test_memory.c  test_memory_gc_integration_64bit.c  test_memory_management_64bit.c  test_tagged_pointers.c  test_tagged_pointers_64bit.c  test_tagged_pointers_64bit_comprehensive.c  test_tagged_pointers_modern.c
todo/: 1.0_JOBS  1.1_JOBS  README  TODO  arrays  auto-close  constraint_interface  control_c  cyclic_terms  dif_constraints  fd_constraints  feature_constraints  flat_guards  foreign_functions  memory_management  meta_execution  mp_numbers  prolog_server  struct_environments  super_suspension  switch_on_constant  syntax  tagged_pointers
tools/: Makefile
(+586 files in other folders)
